<resources>
    <string name="app_name">Process</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="weekday_short_mon">一</string>
    <string name="weekday_short_tue">二</string>
    <string name="weekday_short_wed">三</string>
    <string name="weekday_short_thur">四</string>
    <string name="weekday_short_fri">五</string>
    <string name="weekday_short_sat">六</string>
    <string name="weekday_short_sun">日</string>
</resources>
